cmake_minimum_required(VERSION 3.12)
project(GLDemos)

find_package(GLEW)
#find_package(GLFW REQUIRED)
find_package(GLM)

set(GLFW_INCLUDE_DIRS /usr/local/Cellar/glfw/3.1.2/include)
file(GLOB GLFW_LIBRARIES /usr/local/Cellar/glfw/3.1.2/lib/*.dylib)
message(STATUS ${GLEW_INCLUDE_DIRS})
message(STATUS ${GLEW_LIBRARIES})
message(STATUS ${GLM_INCLUDE_DIRS})
message(STATUS ${GLFW_INCLUDE_DIRS})
message(STATUS ${GLFW_LIBRARIES})
#find_package(glfw)
set(CMAKE_CXX_STANDARD 11)
include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${GLM_INCLUDE_DIRS})
include_directories(${GLFW_INCLUDE_DIRS})

file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/TransformFeedback/*.*)
file(GLOB SRC_COMMON ${PROJECT_SOURCE_DIR}/common/*.*)
MESSAGE(STATUS ${SRC_FILES})
#find_library(GLEW_LIBRARIES)

add_executable(GLDemos main.cpp ${SRC_FILES} ${SRC_COMMON})
target_link_libraries(GLDemos ${GLFW_LIBRARIES} ${GLEW_LIBRARIES})